0.7.0
 - feat: allow to claim a session by another user
 - setup: bump dclab to 0.55.6
0.6.1
 - enh: add new thrombocyte-cluster classes
0.6.0
 - feat: show fluorescence traces
 - setup: bump pyqtgraph from 0.12.3 to 0.13.1
0.5.4
 - enh: add new RBC single class ("round")
0.5.3
 - enh: add several multiplet classes to labels
0.5.2
 - enh: add stiff RBC class to labels
 - enh: add NRBC class to labels
0.5.1
 - fix: previous labels not displayed for user-defined features
 - setup: bump dclab from 0.39.7 to 0.42.3
0.5.0
 - feat: allow to specify different labeling groups
0.4.3
 - docs: add DCTag icon
0.4.2
 - fix: reduce labeling lag by downsampling scatter plot (#31)
 - feat: add jump-to-event option via spinBox (#30)
 - ci: improved testing pipeline
0.4.1
 - enh: use red plot marker in visualization widget (#32)
 - enh: disable auto-contrast by default for the cropped image,
   but allow to enable it again (#32)
 - enh: add brightness vs. time plot (#32)
 - enh: link axes with same feature
 - fix: zoom with right-click on scatter plots had weird origin
 - fix: do not "clear" plots, otherwise scatter plots are empty
   for new sessions
0.4.0
 - feat: add trash icon in GUI for resetting a score (#26)
 - feat: implement `DCTagSession.reset_score` for resetting a
   score to np.nan (#26)
 - fix: repetitive tool tips in binary classification (#27)
0.3.1
 - fix: minor labeling fix for previous/next in multiple tab
 - fix: properly clear visualization after session is closed
 - fix: start enumerating events at 1 instead of 0 in widget_vis
 - tests: increased coverage to >90%
0.3.0
 - feat: implement multi-class labeling (#24)
 - fix: always go to first event when staring to label
0.2.0
 - feat: add fast-forward and fast-backward button in binary tab (#23)
 - fix: progress bar only showed 1% and 100%
0.1.0
 - feat: implement keyboard shortcuts (#15)
 - feat: automatically flush session in background every 60s (#12)
 - feat: remember data location (#20)